only cba tables missing

--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -38,7 +38,7 @@ The University of Chicago}
 \setcounter{figure}{0}  \renewcommand{\thefigure}{A.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{A.\arabic{table}}
 
-\section{Background} \label{appendix:background}
+\section[Background]{Background\footnote{This section of the paper is based on joint work with Sylvi Kuperman.}} \label{appendix:background}
 
 \subsection{Overview}
 
