--- a/output/abccare_programcomparison.tex
+++ b/output/abccare_programcomparison.tex
@@ -15,7 +15,7 @@
 \hspace{.5cm} Recruited Sample &122&67\\
 \hspace{.5cm} \# of Cohorts &4&2\\
 \midrule
-\textbf{Eligibility} & Socio-economic disadvantage according to a multi-factor index (see Section \ref{section:eligibility})&Socio-economic disadvantage according to a multi-factor index (see Section \ref{section:eligibility}) & \checkmark\\
+\textbf{Eligibility} & Socio-economic disadvantage according to a multi-factor index (see Section \ref{section:background})&Socio-economic disadvantage according to a multi-factor index (see Section \ref{section:background}) & \checkmark\\
  \midrule
 \textbf{Control} &&\\
 \hspace{.5cm} N &54&23\\
